--- a/blog-frontend/src/components/BlogPost/blog-post.css
+++ b/blog-frontend/src/components/BlogPost/blog-post.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
+    z-index: 10000000;
     align-items: center;
     justify-content: center;
     
@@ -27,7 +28,10 @@
 .blog-form textarea{
     max-width:494px;
 }
+
 .create-blog-btn{
+    z-index: 10000000;
+
     background-color: green;
   position: fixed;
   top: 0;
